--- a/02-HTML-Fundamentals/index.html
+++ b/02-HTML-Fundamentals/index.html
@@ -110,7 +110,11 @@
             </ul>
             </aside>
 
-            <footer>Copyright &copy; 2022 by the Code Hub</footer>
+            <footer>
+              <p>
+              Copyright &copy; 2022 by the Code Hub
+            </p>
+            </footer>
 </body>
 
 </html>
