--- a/02-HTML-Fundamentals/index.html
+++ b/02-HTML-Fundamentals/index.html
@@ -10,15 +10,21 @@
 </head>
 
 <body>
-    <h1>📘 The Code Magazine</h1>
+    
 
-    <header>
-        <nav>
+    <header class="main-header">
+      <h1>📘 The Code Magazine</h1>
+      <nav>
+            <!-- <strong>This is the navigation</strong> -->
             <a href="blog.html">Blog</a>
             <a href="challenge.html">Challenges</a>
             <a href="#">Flexbox</a>
             <a href="#">CSS Grid</a>
         </nav>
+
+        <p>
+          Test Paragraph  
+        </p>
     </header>
 
     <article>
@@ -27,7 +33,7 @@
 
             <img src="img/profile.jpeg" alt="Profile Picture" width="70" height="70" />
 
-            <p>Posted by <b>Muhammad Usama</b> on Sunday, February 27st 2022</p>
+            <p id="author">Posted by <b>Muhammad Usama</b> on Sunday, February 27st 2022</p>
 
             <img src="img/post-img.jpg" alt="HTML code on a screen" width="500" height="200" />
         </header>
@@ -52,7 +58,7 @@
         <p>In HTML, each element is made up of 3 parts:</p>
 
         <ol>
-            <li>The opening tag</li>
+            <li class="first-li">The opening tag</li>
             <li>The closing tag</li>
             <li>The actual element</li>
         </ol>
@@ -70,7 +76,7 @@
       </p>
 
       <ul>
-        <li>To be able to use the fundamental web dev language</li>
+        <li class="first-li">To be able to use the fundamental web dev language</li>
         <li>
           To hand-craft beautiful websites instead of relying on tools like
           Worpress or Wix
@@ -86,7 +92,7 @@
     <aside>
       <h4>Related posts</h4>
 
-      <ul>
+      <ul class="related">
         <li>
           <img
             src="img/related-1.jpg"
@@ -95,7 +101,7 @@
             height="75px"
           />
           <a href="#">How to Learn Web Development</a>
-            <p>By Jonas Schmedtmann</p>
+            <p class="related-author">By Jonas Schmedtmann</p>
             </li>
             <li>
                 <img src="img/related-2.jpg" alt="Lightning" width="75px" height="75px" />
@@ -111,7 +117,7 @@
             </aside>
 
             <footer>
-              <p>
+              <p id="copyright" class="copyright text">
               Copyright &copy; 2022 by the Code Hub
             </p>
             </footer>
