--- a/02-HTML-Fundamentals/challenge.html
+++ b/02-HTML-Fundamentals/challenge.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+
+    <div class="container">
+
     <article class="product">
         <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
         <img src="img/challenges.jpg" alt="Chuck Taylor All Star Shoe" height="250" width="250" />
@@ -34,6 +37,9 @@
 
         <button class="add-cart">Add to cart</button>
     </article>
+
+</div>
+
 </body>
 
 </html>
